[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sh3_pos"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "ortools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sh3_pos"]

[tool.hatch.envs.default]
dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.default.scripts]
dev = "uvicorn sh3_pos.server:app --reload --port 8001"
start = "uvicorn sh3_pos.server:app --host 0.0.0.0 --port 8001"
check = "mypy src/sh3_pos"
