[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sh3-POS"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Hugo Heynard", email = "hheynard@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "ortools"
]

[project.urls]
Documentation = "https://github.com/Hugo Heynard/optimizer#readme"
Issues = "https://github.com/Hugo Heynard/optimizer/issues"
Source = "https://github.com/Hugo Heynard/optimizer"

[tool.hatch.version]
path = "src/optimizer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/optimizer tests}"
dev = "uvicorn app.server:app --reload --port 8001"
start = "uvicorn app.server:app --host 0.0.0.0 --port 8001"

[tool.coverage.run]
source_pkgs = ["optimizer", "tests"]
branch = true
parallel = true
omit = [
  "src/optimizer/__about__.py",
]

[tool.coverage.paths]
optimizer = ["src/optimizer", "*/optimizer/src/optimizer"]
tests = ["tests", "*/optimizer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
